compiler/lume_hir/src/snapshots/lume_hir__lower__tests__literal_snapshots@bool_true.snap
---
source: compiler/lume_hir/src/lower.rs
description: "true"
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:0:4,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:0:4,
                        kind: Boolean(
                            BooleanLiteral {
                                id: 5871781006564002453,
                                value: true,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:4,
    },
]
